loadtest: switch mock harness off virtual threads to dodge JDK-8373224
JDK 25 (and 21.0.4) regression — JDK-8373224 — causes Thread.sleep on
many concurrent virtual threads to suffer ForkJoinPool work-queue starvation
when the queue count exceeds 2× the scheduler's parallelism. Tail
Thread.sleep latencies on starving VTs stretch to multiple seconds.

The mock harness is the perfect trigger: each concurrent SSE handler is a
VT in a tight Thread.sleep(6.67 ms) loop, and at c=50 we end up with 50+
VTs all in the timer queue. The previous fix (jitter on Thread.sleep) only
masked the bug at moderate concurrency by spreading wake-ups; at c=50 the
~5 s pauses still dominated stream_body (was 65 s, jitter brought it to
~10 s, this brings it to ~500 ms — within 13% of the 567 ms theoretical
floor of 100 ms TTFT + 70/150 s body).

c=50 numbers, fresh-restart each scenario:
  original sync mock:      wall 75 130 ms  tok/s 1.7   max_gap p50 4 999 ms
  jitter only (prior fix): wall 70 385 ms  tok/s 12    max_gap p50 4 675 ms
  platform threads (this): wall    644 ms  tok/s 225   max_gap p50    11 ms

109× wall-time improvement at c=50; 132× tokens/sec; 5 s pauses gone.

JClaw's outbound OkHttp client still uses VTs (via LLM_VT_EXEC) and is fine
— it relies on blocking socket reads, not Thread.sleep, which goes through
a different code path that JDK-8373224 doesn't affect. The mock-harness
side is the only place we run a tight Thread.sleep loop on VTs.

Upstream JDK fix (cap work-queue count at 2× parallelism) is in development
on loom-dev but not yet released. Once it lands and we upgrade, this
workaround becomes a no-op and could be reverted.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>